# slide2video.py

./: .gitignore  Makefile  README.md  pyproject.toml  settings.json  slide2video.py  slide2video.sh.tmpl  slide2video_with_blender.py
etc/: settings.json  settings_for_short.json
lib/: slide2video_with_blender.py
src/: slide2video.py
src/slide2video/: __init__.py
src/slide2video/blender/: __init__.py
tests/spike/: test_partial_argparse.py
