[project]
name = "slide2video"
version = "0.2.0"
description = "本ツールは、スライド資料と、その資料用の音声データからBlenderの動画編集ファイルを作成するツールです。"
readme = "README.md"
authors = [
    { name = "kanta", email = "101532773+kantas-spike@users.noreply.github.com" }
]
requires-python = ">=3.10.13"
dependencies = []

[project.scripts]
slide2video = "slide2video:main"
slide2video_short = "slide2video:main_short"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "fake-bpy-module>=20250901",
    "ruff>=0.12.11",
]

